--- a/htdocs/HP.html
+++ b/htdocs/HP.html
@@ -144,7 +144,7 @@ body {
  <br><span class="ask">集まることができるお座敷があります。</span>
  <br><span class="ask">また居酒屋では珍しい</span>
  <br><span class="ask">リアルタイムで調理している所を</span>
- <br><span class="ask">見られるオープンキッチン	付き‼</span>
+ <br><span class="ask">見られるオープンキッチン付き‼</span>
 </font></Div>
  <br>
 <img src="assets/images/suiko.PNG" width="auto" height="400">
@@ -155,7 +155,7 @@ body {
 <!-- 2のお店 -->
 <div align="right"><img src="assets/images/005.jpg" id="image005" width="auto" height="300"></div>
 <Div style="margin-left: 50%;">
-<font size="5">2.本田商店</font>
+<font size="6">2.本田商店</font>
  <br>
  <br>
 <font size="5">
@@ -168,7 +168,7 @@ body {
 <a href="https://r.gnavi.co.jp/ewvsek990000/?utm_id=type-t_p-nashi_gdnf106_top_pc_g_lis">詳細サイト</a>
  <br>
  <br>
-<span class="ask">こだわりの焼き鳥が自慢、</span>
+<span class="ask">こだわりの焼き鳥が自慢</span>
 <span class="ask">なんとその値段99円‼</span>
 <span class="ask">宴会席は４０名までOKです。</span>
 <span class="ask">サブメニューにも力を入れていて、</span>
@@ -295,9 +295,6 @@ body {
 <span class="ask">飲めます。</span>   
 </font></Div>
 <div align="right"><img src="assets/images/ganso.PNG" width="auto" height="400"></div>
- <br>
- <br>
- <br>
  <br>
  <br>
  <br>
